--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -53,15 +53,30 @@
 
 									<span class="image main"><img src="images/VirtuCards/Project_VirtuCards01.png" alt="The VirtuCards Homepage" /></span>
 
+									<h2>Project Overview</h2>
+
 									<p>VirtuCards is a series of game applications designed to meet the needs of card game
-										aficionado with the safety precautions of the current global pandemic in mind.
+										aficionado with the safety precautions of the COVID-19 pandemic in mind.
 										
+										<!--TODO Mention LinkedIn/Github for each member after reaching out for permission-->
+										I worked in a team along with 5 other members:
+										<ul>
+											<li>Aryan Wadhwani</li>
+											<li>Kade Boltjes</li>
+											<li>June Seo</li>
+											<li>Ryan Hawks</li>
+											<li>Shayne Marques</li>
+										</ul>
+
 										My role in this project was to work on an assortment of tasks both front-end and
 										back-end. I worked on establishing connection with the 
 										Photon servers; creating game rooms; designing UI for the cards; implementing the game
 										logic for shuffling cards and implementing exit functionality. I worked with Unity,
 										C#, Google Firebase and the Photon Library during this project.
-									</p>
+
+										The tasks in this project were assigned to each member by choice as each member wanted
+										to improve their own skills.
+									</p> 
 
 									<hr class="major" />
 
@@ -84,7 +99,15 @@
 
 									<h2>Back-end</h2>
 									<p>
-										
+										With regards to the back-end functionality for this project, I implemented the code
+										for connecting to our client and host to the Photon servers; logging in with Google;
+										sound effects for in-game actions; shuffling the deck; and creating game rooms.
+
+										To help us implement multiplayer functionality in our game, our group utilised the 
+										<a href="https://doc.photonengine.com/en-us/pun/current/getting-started/pun-intro">Photon PUN 2</a>
+										package. This package made our work easier since the documentation and
+										library contained functions that handled more complex things like connecting to
+										Photon's master servers and creating lobbies and rooms.
 									</p>
 
 									<hr class="major" />
