Updated project_virtucards.html with avatars
Added images of Avatars used in VirtuCards. Added information about front-end work and linked Aryan Wadhwani's LinkedIn.

--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -13,16 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
-		<style>
-			.centered-video {
-				position: absolute;
-				margin: auto;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-			}
-		</style>
-
+	
 	</head>
 	<body class="is-preload">
 
@@ -61,7 +52,7 @@
 										<!--TODO Mention LinkedIn/Github for each member after reaching out for permission-->
 										I worked in a team along with 5 other members:
 										<ul>
-											<li>Aryan Wadhwani</li>
+											<li>Aryan Wadhwani - <a href="https://www.linkedin.com/in/aryanwadhwani/" class="icon brands fa-linkedin-in" alt="Aryan Wadhwani's LinkedIn"><span class="label"></span></a></li>
 											<li>Kade Boltjes</li>
 											<li>June Seo</li>
 											<li>Ryan Hawks</li>
@@ -109,6 +100,31 @@
 										library contained functions that handled more complex things like connecting to
 										Photon's master servers and creating lobbies and rooms.
 									</p>
+
+									<hr class="major" />
+
+									<h2>Front-End</h2>
+									<p>
+										With regards to the front-end functionality for this project, I created some preset
+										avatars for users to use and I implemented the code for them to choose one. Along with
+										that, I added code that displayed all the preset avatars in a carousel and stored
+										user's choice in their profile on Google Firebase. I also worked on code that allowed
+										users to pick custom images to use as their avatars.
+
+										The preset avatars are displayed below:
+									</p>
+
+									<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-4"><span class="image fit"><img src="images/VirtuCards/Project_VirtuCards02.png" alt="Avatar 1" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/VirtuCards/Project_VirtuCards03.png" alt="Avatar 2" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/VirtuCards/Project_VirtuCards04.png" alt="Avatar 3" /></span></div>
+											<!-- Break -->
+											<div class="col-4"><span class="image fit"><img src="images/VirtuCards/Project_VirtuCards05.png" alt="Avatar 4" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/VirtuCards/Project_VirtuCards06.png" alt="Avatar 5" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/VirtuCards/Project_VirtuCards07.png" alt="Avatar 6" /></span></div>
+										</div>
+									</div>
 
 									<hr class="major" />
 
