--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 										<li><a href="#">Etiam Dolore</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Art Pieces</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
@@ -284,7 +284,7 @@
 							<!-- Footer -->
 								<footer id="footer">
 									<p class="copyright">&copy; UmangSharma24. All rights reserved. <br /> 
-										Last Updated: <i>April 2021</i> <br />
+										Last Updated: <i>July 2021</i> <br />
 										Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
