--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -126,12 +126,19 @@
 										</div>
 									</div>
 
+									<br />
+									<br />
+
 									<hr class="major" />
 
 									<h2>Video Tutorial</h2>
 									<!--Embed code for YouTube video tutorial for Virtucards modified to be displayed in center of page-->
 									<iframe style="display: block; margin: auto;" width="100%" height="600" src="https://www.youtube.com/embed/kU9bJ9BJvAs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									
+									<hr class="major" />
+
+									<h2>Project Retrospective</h2> 
+									Overall, I had a g
 
 								</section>
 
