Added Social URLs for project teammates

--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -52,11 +52,28 @@
 										<!--TODO Mention LinkedIn/Github for each member after reaching out for permission-->
 										I worked in a team along with 5 other members:
 										<ul>
-											<li>Aryan Wadhwani - <a href="https://www.linkedin.com/in/aryanwadhwani/" class="icon brands fa-linkedin-in" alt="Aryan Wadhwani's LinkedIn"><span class="label"></span></a></li>
-											<li>Kade Boltjes</li>
-											<li>June Seo</li>
-											<li>Ryan Hawks</li>
-											<li>Shayne Marques</li>
+											<li>Aryan Wadhwani
+												<br /><a href="https://www.linkedin.com/in/aryanwadhwani/"
+												class="button primary small">Aryan's LinkedIn</a>
+												<a href="https://github.com/A-Wadhwani" class="button primary small">Aryan's Github</a>
+											</li>
+											<br />
+											<li>Kade Boltjes
+												<br /><a href="https://www.linkedin.com/in/kade-boltjes-b3b139191/"
+												class="button small">Kade's LinkedIn</a></li>
+												<a href="https://github.com/Kboltjes" class="button small">Kade's Github</a>
+											<br />
+											<li>June Seo
+												<br /><a href="" class="button primary small">June's LinkedIn</a></li>
+											<br />
+											<li>Ryan Hawks
+												<br /><a href="https://www.linkedin.com/in/ryan-hawks-5a41391b6/"
+												class="button small">Ryan's LinkedIn</a></li>
+											<br />
+											<li>Shayne Marques
+												<br /><a href="https://www.linkedin.com/in/shayne-marques-bb162717b/"
+												class="button primary small">Shayne's LinkedIn</a>
+												<a href="https://github.com/shayne243" class="button primary small">Shayne's Github</a></li>
 										</ul>
 
 										My role in this project was to work on an assortment of tasks both front-end and
@@ -138,7 +155,9 @@
 									<hr class="major" />
 
 									<h2>Project Retrospective</h2> 
-									Overall, I had a g
+									<p>
+										
+									</p>
 
 								</section>
 
