Added Project Retrospective for VirtuCards

--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -60,8 +60,8 @@
 											<br />
 											<li>Kade Boltjes
 												<br /><a href="https://www.linkedin.com/in/kade-boltjes-b3b139191/"
-												class="button small">Kade's LinkedIn</a></li>
-												<a href="https://github.com/Kboltjes" class="button small">Kade's Github</a>
+												class="button small">Kade's LinkedIn</a>
+												<a href="https://github.com/Kboltjes" class="button small">Kade's Github</a></li>
 											<br />
 											<li>June Seo
 												<br /><a href="" class="button primary small">June's LinkedIn</a></li>
@@ -156,7 +156,12 @@
 
 									<h2>Project Retrospective</h2> 
 									<p>
-										
+										I had a spectacular time working on this project along with my team. We 
+										started out simply as classmates but I think we grew to become friends.
+										Our 4 month journey creating this application was quite a ride and I'm 
+										glad I signed up for this course. It provided me with a unique opportunity 
+										to create an extensive piece of software and I appreciate the skills 
+										I've learnt and polished working on it.
 									</p>
 
 								</section>
