--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/Project_Website.png" alt="" /></a>
-											<p> Working on Website Project webpage.
+											<a href="#" class="image"><img src="images/Recent_Update_7-27-21.png" alt="" /></a>
+											<p> Added URLs to socials of all members of VirtuCards. Added Project Overview
+												for VirtuCards.
 												<br />
 											 </p>
 										</article>
