Added June's social URL

--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -64,7 +64,8 @@
 												<a href="https://github.com/Kboltjes" class="button small">Kade's Github</a></li>
 											<br />
 											<li>June Seo
-												<br /><a href="" class="button primary small">June's LinkedIn</a></li>
+												<br /><a href="https://www.linkedin.com/in/dongjune-seo/"
+												class="button primary small">June's LinkedIn</a></li>
 											<br />
 											<li>Ryan Hawks
 												<br /><a href="https://www.linkedin.com/in/ryan-hawks-5a41391b6/"
