Added information about Testing in project_virtucards.html

--- a/project_virtucards.html
+++ b/project_virtucards.html
@@ -190,7 +190,15 @@
 
 									<h2>Testing</h2>
 									<p>
-										<i>In Progress</i>
+										Testing was another significant part of my learning experience while 
+										working on VirtuCards with my team. We created document tests in order 
+										to test the various features we'd implemented. We opted for document
+										tests over unit tests as a lot of the components we implemented and 
+										needed to test were UI based and gameplay based. I wrote 10 test
+										documents which each contained around 4 tests and the documents tested
+										an assortment of features from Server-Client connection to the
+										shuffling of cards during a game. I've worked on Test Cases: 07, 12,
+										16, 28, 29, 38, 46, 47, 51 and 52.			
 									</p>
 
 									<hr class="major" />
