--- a/artwork_and_designs.html
+++ b/artwork_and_designs.html
@@ -45,7 +45,21 @@
 										portfolio of my work.
 									</p>
 
-									
+									<div class="box alt">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-4"><span class="image fit"><img src="images/Art/001.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/Art/002.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/Art/003.png" alt="" /></span></div>
+											<!-- Break -->
+											<div class="col-4"><span class="image fit"><img src="images/Art/004.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/Art/005.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/Art/006.png" alt="" /></span></div>
+											<!-- Break -->
+											<div class="col-4"><span class="image fit"><img src="images/Art/007.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/Art/008.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/Art/009.png" alt="" /></span></div>
+										</div>
+									</div>
 
 								</section>
 
